<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/coreLayout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/container"
        android:background="#ffb9dba8">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="0.8"
            android:layout_height="0dp"
            android:id="@+id/search_layout">

            <!--<TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/enter_skiStation"
                            android:id="@+id/textView"
                            android:textStyle="bold"
                            android:layout_gravity="center_horizontal" />-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/inputField"
                        android:layout_weight="1"
                        android:hint="@string/hint"
                        android:inputType="text"
                        android:textStyle="italic" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnSearch_name"
                        android:id="@+id/btnSearch"
                        android:layout_gravity="right"
                        android:clickable="false" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnVibration"
                        android:id="@+id/btnVibration"
                        android:layout_gravity="right"/>

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:id="@+id/btnLocation"
                        android:layout_gravity="right"/>

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Selectionner"
                        android:id="@+id/btnSelectionner"
                        android:layout_gravity="right"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:id="@+id/img_weather_display">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="0dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/imgWeather"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/imgView_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/img_desc"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:baselineAligned="false"
            android:id="@+id/data_display">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/tempsMatin_dis"
                        android:text="@string/tempsMatin_dis"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/tempsMatin_deg"
                        android:textAlignment="gravity"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/tempsMidi_dis"
                        android:text="@string/tempsMidi_dis"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/tempsMidi_deg"
                        android:textAlignment="gravity"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/niveau_neige"
                        android:text="@string/niveau_neige"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/niveau_dis"
                        android:textAlignment="gravity"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/vitesse_vent"
                        android:text="@string/vitesse_vent"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/vent_dis"
                        android:textAlignment="gravity"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
